batched-devops/eks/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  clusterIP: 'None'
  ports:
  - name: http-port
    port: 15672
    protocol: TCP
    targetPort: http
  - name: amqp-port
    port: 5672
    protocol: TCP
    targetPort: amqp
  selector:
    app: rabbitmq
  type: ClusterIP
